# gpsdo-monitor

./: .gitignore  CLAUDE.md  README.md  deploy.toml  install.sh  pyproject.toml
deploy/: 99-gpsdo.rules  config.example.toml  gpsdo-monitor.service
deploy/sysusers.d/: gpsdo.conf
docs/: PROTOCOL.md  SCHEMA-v1.md  TOPOLOGY.md
scripts/: deploy.sh
src/gpsdo_monitor/: __init__.py  __main__.py  advisories.py  cli.py  config.py  discovery.py  health.py  hid_xport.py  nmea.py  pps.py  publish.py  schema.py  service.py  tui.py  ubx.py
src/gpsdo_monitor/data/: firmware_advisories.toml
src/gpsdo_monitor/models/: __init__.py  base.py  lbe_1420.py  lbe_1421.py  lbe_mini.py  registry.py
tests/: test_advisories.py  test_discovery.py  test_health.py  test_mini.py  test_models.py  test_nmea.py  test_pps.py  test_schema.py  test_service.py  test_ubx.py
